Reject PaymentResponse.complete() promise on error.

If the user cancels the PaymentRequest UI by clicking on the Android
"back" button while the website is processing the transaction, then
website's complete() call should be rejected.

BUG=621767

Review-Url: https://codereview.chromium.org/2083883003
Cr-Commit-Position: refs/heads/master@{#401110}

Former-commit-id: 3897d84540af80d6f88cc5ecc0b89d722ab366ae